# LifeOS

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  life-os-prd-1.0.md  skills-lock.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: context.py  supervisor.py
backend/app/agents/domain_agents/: career_agent.py  family_agent.py  finance_agent.py  growth_agent.py  health_agent.py  property_agent.py  social_agent.py
backend/app/agents/task_agents/: inbox_agent.py  review_agent.py
backend/app/db/: client.py
backend/app/mcp/: finance_mcp.py  health_mcp.py  lifeos_server.py  mcp_client.py
backend/app/memory/: compressor.py  mem0_client.py
backend/app/models/: conversation.py  entry.py  goal.py  habit.py  user.py
backend/app/observability/: logging.py  metrics.py  tracing.py
backend/app/security/: audit.py  auth.py  disclaimers.py  encryption.py  rate_limiter.py  sanitisation.py
backend/app/services/: ai_service.py  document_service.py  nudge_service.py  prioritiser.py  review_service.py  score_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/regression/: test_critical_paths.py
backend/tests/unit/: test_ai_coach.py  test_assets.py  test_consent.py  test_documents.py  test_homescreen.py  test_important_dates.py  test_knowledge.py  test_life.py  test_notifications.py  test_personalisation.py  test_planner.py  test_score_service.py  test_supervisor.py  test_tasks.py
frontend/: Dockerfile  (+6 more)
(+114 files in other folders)
